[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# ignore-vcs = true
# only-packages = true
packages = ["mqttstuff", "mqttcommander"]
#artifacts = [
#  "pytest.ini",
#  ".mypy.ini"
#]
#include = [
#    "pytest.ini",
#    ".mypy.ini",
#]
#exclude = [
#  ".gitignore"
#]

[project]
name = "mqttstuff"
version = "0.0.2"
authors = [
  { name="Henning Thieß", email="ht@xomox.cc" },
]
description = "MQTTStuff"
readme = "README.md"
requires-python = ">=3.12"

# https://github.com/pypa/trove-classifiers/blob/main/src/trove_classifiers/__init__.py
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

dependencies = [
    'loguru>=0.7.3',
    'pytz>=2025.2',
    'paho-mqtt>=2.1.0',
    'pydantic>=2.11.0',
    'pydantic-settings>=2.11.0',
    'pydantic_extra_types>=2.10.2',
    'PyYAML>=6.0.0'
]

#[project.optional-dependencies]
#tests = [
#    'pytest==7.1.3'
#]


[project.urls]
"Homepage" = "https://github.com/vroomfondel/mqttstuff"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

